Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15.2, 6.0.0
-
Fix Version/s: 6.0.1, 6.1.0 Alpha
-
Component/s: Documentation, Quick: Timeline
-
Labels:None
-
Platform/s:
-
Commits:077b41a92481c5e8600fe82c7eb2468e7eec198b (qt/qtquicktimeline/dev) 31c23847b5e45a559843cdb575cca600770ee052 (qt/qtquicktimeline/6.0) 67503cdadea43b95ddad0de1a04951aff0ce1a07 (qt/qtquicktimeline/5.15)
Description
Qml TimelineAnimation inherits qtquick NumberAnimation type, but our documentation completely misses that and all the members it inherits. So it looks like TimelineAnimation has only 2 properties instead of more than dozen:
- https://doc.qt.io/qt-5.15/qml-qtquick-timeline-timelineanimation.html
- https://doc.qt.io/qt-6/qml-qtquick-timeline-timelineanimation.html
Check TimelineAnimation in QtForMcu for comparison, it tracks the type better: https://doc.qt.io/QtForMCUs/qml-qtquick-timeline-timelineanimation-members.html