Doc: Fix documentation configuration

Fix the values of \inherits command to QtObject and
NumberAnimation, and add qtqml as a value of the
depends option in the module .qdocconf file.

Fixes: QTBUG-89479
Change-Id: I49de7e400540f146de3e8ae40b303788fa735189
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit 077b41a92481c5e8600fe82c7eb2468e7eec198b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>