src/imports/timeline/qquickkeyframe.cpp
@@ -119,7 +119,7 @@ public:
 
 /*!
     \qmltype Keyframe
-    \inherits QObject
+    \inherits QtObject
     \instantiates QQuickKeyframe
     \inqmlmodule QtQuick.Timeline
     \ingroup qtqmltypes
@@ -193,7 +193,7 @@ QQuickKeyframe::QQuickKeyframe(QQuickKeyframePrivate &dd, QObject *parent)
 
 /*!
     \qmltype KeyframeGroup
-    \inherits QObject
+    \inherits QtObject
     \instantiates QQuickKeyframeGroup
     \inqmlmodule QtQuick.Timeline
     \ingroup qtqmltypes
